<resources>
    <string name="app_name">学生信息管理系统</string>

    <!-- Strings related to login -->
    <string name="prompt_email">学号</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="mima">请输入密码</string>
    <string name="xuehao">请输入学号</string>
    <string name="login">登录</string>
    <string name="grade">成绩</string>
    <string name="test">考试</string>
    <string name="garde">成绩查询</string>
    <string name="select">筛选</string>
    <string name="gpa">GPA</string>
    <string name="total">全部</string>
    <string name="abort">关于</string>
    <string name="me">我的</string>
    <string name="testTitle">考试安排</string>
    <string name="upwaed">上周</string>
    <string name="down">下周</string>
    <string name="timetable">课程表</string>
</resources>
