<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.linguangyu.studentinfomanagementsystem.activity.LoginActivity">

    <include layout="@layout/title_login"/>

    <TextView
        android:id="@+id/text_1"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="教务系统账号" />

    <View
        android:layout_marginTop="10dp"
        android:background="@color/colorGray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:id="@+id/line1"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_studentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/xuehao"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingBottom="15dp"
            android:textSize="16dp"
            android:lines="1"/>

        <EditText
            android:id="@+id/edit_password"
            android:hint="@string/mima"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"/>

    </LinearLayout>
    <View
        android:background="@color/colorGray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <Button
        android:id="@+id/button_login"
        android:background="@color/colorBlue"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/button_1"
        android:text="添加"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
