<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_content"
        android:layout_above="@+id/view_below"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_main_login"
            android:layout_centerInParent="true"
            android:src="@mipmap/please_login"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_main_login"
            android:text="请先登录使用"
            android:textSize="10sp"
            android:layout_below="@+id/image_main_login"
            android:layout_centerInParent="true"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <View
        android:id="@+id/view_below"
        android:layout_above="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorBlue"/>

    <LinearLayout
        android:id="@+id/tab_menu"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/colorGray"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:id="@+id/tab_menu_timetable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/image_timetable"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/tar_menu_timetable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_timetable"
                android:layout_below="@+id/image_timetable"
                android:layout_centerInParent="true"
                android:text="@string/timetable"
                android:textSize="12dp"
                android:textColor="@drawable/tab_menu_timetable_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_menu_grade"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/image_grade"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/tar_menu_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_grade"
                android:layout_below="@+id/image_grade"
                android:layout_centerInParent="true"
                android:text="@string/grade"
                android:textSize="12dp"
                android:textColor="@drawable/tab_menu_timetable_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_menu_test"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/image_test"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/tar_menu_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_test"
                android:layout_below="@+id/image_test"
                android:layout_centerInParent="true"
                android:text="@string/test"
                android:textSize="12dp"
                android:textColor="@drawable/tab_menu_timetable_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/tab_menu_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/image_me"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/tar_menu_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_me"
                android:layout_below="@+id/image_me"
                android:layout_centerInParent="true"
                android:text="@string/me"
                android:textSize="12dp"
                android:textColor="@drawable/tab_menu_timetable_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>